Fixed new changes from glenn

--- a/views/JobTitles.ejs
+++ b/views/JobTitles.ejs
@@ -50,7 +50,7 @@
       </nav>
 
 
-    <h1 class="">Job roles!</h1>
+    <h1 class=""><%= title %></h1>
     <div class="list-group">
       <ul>
         <% for (let job of jobs) { %>
