--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,13 +1,12 @@
 <%- include('../templates/components/notification-bar'); %>
 <%- include('../templates/components/common-header'); %>
+
 <body>
 
     <div class="main-container">
         <div class="main-content center">
-            <%- include('../templates/components-page-specific/auth/login-form'); %>
+            Home Page - You have been login.
         </div>
     </div>
 
 </body>
-
-<%- include('../templates/components/footer'); %>
