--- a/views/templates/components-page-specific/auth/login-form.ejs
+++ b/views/templates/components-page-specific/auth/login-form.ejs
@@ -5,8 +5,8 @@
 
         <form action="/login" method="post" id="login-form">
             <div class="form-group">
-                <label for="username" class="form-titles">Username</label>
-                <input type="text" id="username" name="username" class="form-control"  placeholder="Enter a valid username" required>
+                <label for="email" class="form-titles">Email</label>
+                <input type="email" id="email" name="email" class="form-control" placeholder="Enter a valid email" required>
             </div>
             <div class="form-group">
                 <label for="password" class="form-titles">Password</label>
