--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -5,7 +5,7 @@
 
     <div class="main-container">
         <div class="main-content center">
-            Home Page - You have been login.
+            Home Page - You have been logged in.
         </div>
     </div>
 
