--- a/views/JobTitles.ejs
+++ b/views/JobTitles.ejs
@@ -66,13 +66,20 @@
     <ul>
       <% if (jobs.length> 0) { %>
         <% for (let job of jobs) { %>
-          <li><a href="#" class="list-group-item list-group-item-action">
-              <%= job.jobName %>
-            </a></li>
+            <li>
+              <a href="#" class="list-group-item list-group-item-action">
+                <%= job.jobName %>
+                <% if (job.jobCapabilityName != 'undefined') { %>
+                  - (<%= job.jobCapabilityName %> )
+                <% } else { %>
+                  - (No Capability Stored)
+                <% } %>
+              </a>
+            </li>
           <% } %>
-            <% } else { %>
-              <li>No jobs available</li>
-              <% } %>
+      <% } else { %>
+        <li>No jobs available</li>
+      <% } %>
     </ul>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
