--- a/views/JobById.ejs
+++ b/views/JobById.ejs
@@ -63,19 +63,25 @@
   <h1 class="">
     <%= title %>
   </h1>
+  <br>
   <div class="list-group">
-    <ul>
-      <% for (let job of jobs) { %>
-        <li>
-          <a href="#" class="list-group-item list-group-item-action">
-            <%= job.jobName %>
-          </a>
-          <button type="button">
-            <a href="http://localhost:3000/jobs/<%= job.jobId %>">View</a>
-          </button>
-        </li>
-        <% } %>
-    </ul>
+
+    <h2>Job Name:</h2>
+    <p>
+      <%= job.jobName %>
+    </p>
+
+    <h2>Job Spec:</h2>
+    <p>
+      <%= job.jobSpecName %>
+    </p>
+
+    <h2>Job Spec Sharepoint:</h2>
+    <a href="<%= job.jobSpecSharepointLink %>" target="_blank">
+      <%= job.jobSpecSharepointLink %>
+    </a>
+
+
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
