--- a/views/JobById.ejs
+++ b/views/JobById.ejs
@@ -66,6 +66,8 @@
   <br>
   <div class="list-group">
 
+    <% if (job != 'undefined') { %>
+
     <h2>Job Name:</h2>
     <p>
       <%= job.jobName %>
@@ -81,6 +83,25 @@
       <%= job.jobSpecSharepointLink %>
     </a>
 
+    <h2>Job Responsibilities:</h2>
+    <p>
+        <%= responsibilities.responsibilityTextBody %>
+
+      <% if (responsibilityPoints.length != 0) { %>
+
+      <!-- Loop Through points -->
+      <% for (let point of responsibilityPoints) { %>
+        <br>
+        -> <%= point %>
+        <% } %>
+
+      <% } %>
+    </p>
+
+    <% } else { %>
+      Error -> Could Not Get job Spec.
+
+      <% } %>
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
