updated model and by id page to show share point url

--- a/views/JobById.ejs
+++ b/views/JobById.ejs
@@ -66,19 +66,14 @@
   <br>
   <div class="list-group">
 
-    <h2>Job Name:</h2>
+    <h2>Job Name</h2>
     <p>
       <%= job.jobName %>
     </p>
 
-    <h2>Job Spec:</h2>
-    <p>
-      <%= job.jobSpecName %>
-    </p>
-
-    <h2>Job Spec Sharepoint:</h2>
-    <a href="<%= job.jobSpecSharepointLink %>" target="_blank">
-      <%= job.jobSpecSharepointLink %>
+    <h2>Job Spec</h2>
+    <a href="<%= job.jobSpecUrl%>" target="_blank">
+       View
     </a>
 
 
